--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
                 </div>
             </div>
             <div class="form">
+                <div class="message">请输入密码！</div>
                 <input class="user" type="text" placeholder="账户名"/>
                 <input class="password" type="password" placeholder="密码"/>
                 <button>登录</button>
@@ -32,7 +33,8 @@
 
 
 
-
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="js/profession/webSocket.js" type="text/javascript"></script>
 <script src="js/profession/common.js" rel="script"></script>
 <script src="js/profession/login.js" rel="script"></script>
 </body>
