--- a/my-lesson.html
+++ b/my-lesson.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="title">
-    <p>我的课程</p>
+    <p id="studentID">我的课程</p>
 </header>
 <div class="lesson-message">
     <section class="swiper-container">
@@ -23,13 +23,30 @@
                     </p>
                     <div class="lesson-content">
                         <span class="tab"></span>
+                        <p class="teacher">教师：<span>王梅梅</span></p>
+                        <ul>
+                            <li class="name">托福拔高阅读L1第三次课</li>
+                            <li class="time">9：00-12：00</li>
+                            <li class="location">武林广场16-3教</li>
+                        </ul>
+                        <span class="course_state before-lesson"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="item_ ">
+                    <p class="portrait">
+                        <span class="portrait-img"><img src="img/touxiang1.png"></span>
+                    </p>
+                    <div class="lesson-content">
+                        <span class="tab"></span>
                         <p class="teacher">教师：王梅梅</p>
                         <ul>
                             <li class="name">托福拔高阅读L1第三次课</li>
                             <li class="time">9：00-12：00</li>
                             <li class="location">武林广场16-3教</li>
                         </ul>
-                        <span class="enter-lesson"></span>
+                        <span class="course_state lessoning"></span>
                     </div>
                 </div>
 
@@ -47,25 +64,7 @@
                             <li class="time">9：00-12：00</li>
                             <li class="location">武林广场16-3教</li>
                         </ul>
-                        <span class="enter-lesson"></span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="swiper-slide">
-                <div class="item_ ">
-                    <p class="portrait">
-                        <span class="portrait-img"><img src="img/touxiang1.png"></span>
-                    </p>
-                    <div class="lesson-content">
-                        <span class="tab"></span>
-                        <p class="teacher">教师：王梅梅</p>
-                        <ul>
-                            <li class="name">托福拔高阅读L1第三次课</li>
-                            <li class="time">9：00-12：00</li>
-                            <li class="location">武林广场16-3教</li>
-                        </ul>
-                        <span class="enter-lesson"></span>
+                        <span class="course_state after-lesson"></span>
                     </div>
                 </div>
 
@@ -73,7 +72,14 @@
         </div>
     </section>
 </div>
+
+
+
+
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="js/profession/webSocket.js" type="text/javascript"></script>
 <script src="js/profession/common.js"></script>
+<script src="js/profession/my-lesson.js"></script>
 <script src="js/common/swiper-4.1.0.min.js"></script>
 <script>
     let mySwiper = new Swiper('.swiper-container', {
