--- a/my-exam.html
+++ b/my-exam.html
@@ -43,6 +43,7 @@
         <div class="answer"></div>
     </div>
 </div>
+<script src="js/common/swiper-4.1.0.min.js" type="text/javascript"></script>
 <script src="js/profession/common.js"></script>
 </body>
 </html>
